fix slider and change table on mobile

--- a/src/app/pages/school/school.component.scss
+++ b/src/app/pages/school/school.component.scss
@@ -17,12 +17,13 @@
         filter: drop-shadow(5px 5px 5px #222);
 
         &#young-0 {
+          position: relative;
+          z-index: 1;
           display: inline-block;
           transform: translate(-25px, 70px);
           margin-left: 0vw;
-          transition: margin-left 0.5s ease-in-out;
 
-          img {
+          .young-animal {
             animation: young-move 10s ease-in-out infinite;
           }
         }
@@ -30,7 +31,7 @@
         &#young-1 {
           display: inline-block;
 
-          img {
+          .young-animal {
             animation: young-move 10s ease-in-out infinite;
             animation-delay: 3s;
           }
@@ -40,13 +41,13 @@
           display: inline-block;
           transform: translate(25px, 70px);
 
-          img {
+          .young-animal {
             animation: young-move 10s ease-in-out infinite;
             animation-delay: 7s;
           }
         }
 
-        img {
+        &-animal {
           cursor: pointer;
           width: 140px;
 
@@ -61,8 +62,15 @@
             55%  { transform: rotate(-5deg)  translateX(-5px);  }
             57%  { transform: rotate(0)      translateX(0px);   }
             100% { transform: rotate(0)      translateX(0px);   }
+          }
+        }
 
-            }
+        &-table {
+          position: absolute;
+          left: -100%;
+          bottom: -9%;
+          z-index: -1;
+          width: 300%;
         }
       }
     }
@@ -98,7 +106,7 @@
 
 
 
-@media (max-width: 600px) {
+@media (max-width: 850px) {
 
   .school {
     .youngs {
@@ -120,11 +128,20 @@
 
           &#young-0 {
             margin: 5vw;
+            transition: margin-left 0.5s ease-in-out;
           }
 
-          img {
-            width: 70%;
+          &-animal {
+            width: 250px;
             animation: young-move 10s ease-in-out infinite;
+          }
+
+          &-table {
+            left: 50%;
+            transform: translateX(-50%);
+            bottom: -50px;
+            z-index: -1;
+            width: 750px;
           }
         }
       }
